# random_poisson

./: .gitignore  CMakeLists.txt  Makefile  README.md  bind.cpp  poisson.cpp  setup.py  test.py
libc/: random.cpp  random.hpp  random_poisson.cpp  random_poisson.hpp
